--- a/app/src/main/res/drawable/btn_gotologin.xml
+++ b/app/src/main/res/drawable/btn_gotologin.xml
@@ -2,18 +2,15 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/white"/>
+            <solid android:color="#00FFFFFF"/>
             <corners android:radius="50dp"/>
         </shape>
     </item>
 
     <item android:state_enabled="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/white"/>
+            <solid android:color="#00FFFFFF"/>
             <corners android:radius="50dp"/>
-            <stroke
-                android:width="1dp"
-                android:color="@color/mainblue"/>
         </shape>
     </item>
 </selector>
