--- a/app/src/main/res/drawable/btn_gotologin.xml
+++ b/app/src/main/res/drawable/btn_gotologin.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- 버튼 눌러진 상태 -->
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
             <solid android:color="#00FFFFFF"/>
@@ -7,6 +8,7 @@
         </shape>
     </item>
 
+    <!-- 버튼 기본 상태 -->
     <item android:state_enabled="true">
         <shape android:shape="rectangle">
             <solid android:color="#00FFFFFF"/>
