--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!-- Homefit 제목 -->
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
@@ -19,6 +20,25 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- ID 입력 필드 -->
+    <EditText
+        android:id="@+id/editTextTextPersonName2"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="52dp"
+        android:ems="10"
+        android:hint="ID"
+        android:inputType="textPersonName"
+        android:paddingLeft="20dp"
+        android:textSize="20sp"
+        android:textColorHint="@color/hintblack"
+        android:background="@drawable/textline"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+    <!-- 비밀번호 입력 필드 -->
     <EditText
         android:id="@+id/editTextTextPassword3"
         android:layout_width="300dp"
@@ -36,6 +56,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />
 
+    <!-- 로그인 버튼 -->
     <Button
         android:id="@+id/button4"
         android:layout_width="300dp"
@@ -50,6 +71,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3" />
 
+    <!-- 회원가입 버튼 -->
     <Button
         android:id="@+id/button5"
         android:layout_width="300dp"
@@ -66,21 +88,5 @@
         app:layout_constraintTop_toBottomOf="@+id/button4"
         app:layout_constraintVertical_bias="0" />
 
-    <EditText
-        android:id="@+id/editTextTextPersonName2"
-        android:layout_width="300dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="52dp"
-        android:ems="10"
-        android:hint="ID"
-        android:inputType="textPersonName"
-        android:paddingLeft="20dp"
-        android:textSize="20sp"
-        android:textColorHint="@color/hintblack"
-        android:background="@drawable/textline"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
