--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".signup">
 
+    <!-- 회원가입 제목 -->
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
@@ -21,6 +22,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- ID 입력 필드 -->
     <EditText
         android:id="@+id/editTextTextPersonName"
         android:layout_width="300dp"
@@ -38,6 +40,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
+    <!-- 비밀번호 입력 필드 -->
     <EditText
         android:id="@+id/editTextTextPassword"
         android:layout_width="300dp"
@@ -55,6 +58,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
 
+    <!-- 비밀번호 확인 입력 필드 -->
     <EditText
         android:id="@+id/editTextTextPassword2"
         android:layout_width="300dp"
@@ -72,6 +76,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
 
+    <!-- 회원가입 버튼 -->
     <Button
         android:id="@+id/button3"
         android:layout_width="300dp"
@@ -88,6 +93,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
         app:layout_constraintVertical_bias="0.117" />
 
+    <!-- 로그인 바로가기 버튼 -->
     <Button
         android:id="@+id/button6"
         android:layout_width="wrap_content"
