--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -39,45 +39,49 @@
 
         <Button
             android:id="@+id/button1"
-            android:layout_width="match_parent"
+            android:layout_width="372dp"
+            android:layout_height="100dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:paddingLeft="20dp"
+            android:background="@drawable/btn_home"
+            android:gravity="center_vertical"
+            android:text="체크리스트"
+            android:textSize="20dp"
+
+            />
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="372dp"
             android:layout_height="100dp"
             android:layout_marginTop="20dp"
-            android:gravity="center"
-            android:paddingRight="150dp"
-            android:text="체크리스트"
-            android:textSize="30dp"
-            android:background="@color/white"
+            android:layout_marginLeft="20dp"
+            android:paddingLeft="20dp"
+            android:background="@drawable/btn_home"
+            android:gravity="center_vertical"
+            android:text="운동영상"
+            android:textSize="20dp"
+
             />
 
         <Button
             android:id="@+id/button2"
-            android:layout_width="match_parent"
+            android:layout_width="372dp"
             android:layout_height="100dp"
             android:layout_marginTop="20dp"
-            android:gravity="center"
+            android:layout_marginLeft="20dp"
+            android:background="@drawable/btn_home"
+            android:gravity="center_vertical"
+            android:paddingLeft="20dp"
             android:paddingRight="175dp"
-            android:textSize="30dp"
             android:text="스톱워치"
-            android:background="@color/white"
-          />
-
-        <Button
-            android:id="@+id/button3"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_marginTop="20dp"
-            android:gravity="center"
-            android:paddingRight="175dp"
-            android:textSize="30dp"
-            android:text="운동영상"
-            android:background="@color/white"
+            android:textSize="20dp"
 
             />
 
 
     </LinearLayout>
-
-
 
 
 </LinearLayout>
