--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -1,75 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bg"
-    android:orientation="vertical"
     tools:context=".Video">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2">
+
+    <Button
+        android:id="@+id/button_workout1"
+        android:layout_width="0dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="19dp"
+        android:layout_marginEnd="19dp"
+        android:layout_marginBottom="32dp"
+        android:background="@drawable/btn_home"
+        android:gravity="center_vertical"
+        android:paddingLeft="30dp"
+        android:text="스트레칭\n상체"
+        app:layout_constraintBottom_toTopOf="@+id/button_workout2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="운동 영상"
-            android:textSize="30dp"
-            android:textStyle="bold"
-            android:textColor="@color/black"
-            android:layout_marginTop="90dp"
-            android:layout_marginLeft="30dp"
-            >
+    <Button
+        android:id="@+id/button_workout2"
+        android:layout_width="372dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginBottom="292dp"
+        android:background="@drawable/btn_home"
+        android:gravity="center_vertical"
+        android:paddingLeft="30dp"
+        android:text="스트레칭\n하체"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-        </TextView>
+    <TextView
+        android:id="@+id/apptitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginBottom="49dp"
+        android:text="운동 영상"
+        android:textColor="@color/black"
+        android:textSize="25dp"
+        app:layout_constraintBottom_toTopOf="@+id/button_workout1"
+        app:layout_constraintStart_toStartOf="parent" />
 
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="8"
-        android:orientation="vertical">
-
-
-
-        <Button
-            android:id="@+id/button_workout1"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:text="버튼 1"
-            android:background="@color/white"
-            />
-
-        <Button
-            android:id="@+id/button_workout2"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:text="버튼2"
-            android:background="@color/white"
-            />
-
-        <Button
-            android:id="@+id/homebutton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="175dp"
-            android:layout_marginTop="300dp"
-            android:clickable="true"
-            app:backgroundTint="@color/mainblue"
-            />
+    <ImageButton
+        android:id="@+id/home_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/homebutton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
-    </LinearLayout>
-
-
-
-
-
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
