--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="subblue">#B2C9EC</color>
     <color name="textblack">#353535</color>
     <color name="hintblack">#C5C5C5</color>
+    <color name="transparent">#00000000</color>
 </resources>
