--- a/app/src/main/res/drawable/btn_home.xml
+++ b/app/src/main/res/drawable/btn_home.xml
@@ -11,7 +11,7 @@
             </item>
             <item>
                 <shape android:shape="rectangle">
-                    <solid android:color="@color/mainblue"/> <!-- 그림자 색상 -->
+                    <solid android:color="@color/white"/> <!-- 그림자 색상 -->
                     <corners android:radius="15dp"/>
                 </shape>
             </item>
